@@ -1,3 +1,9 @@
+<h2>2024-10-23:</h2>
+<ul>
+    <li>Improvements to icon handling, courtesy of <a href="https://github.com/leonwhittle">@leonwhittle</a>
+    <li>Better handling of missing rootLevels, will now display a detailed error.</li>
+</ul>
+
 <h2>2024-06-18:</h2>
 <ul>
     <li>Performance improvements, as we've got a bigger server now.<ul>
